--- a/index.html
+++ b/index.html
@@ -81,21 +81,34 @@
     -->     
     <section id = "introduction">
       <div id = "title-heading" class = "vertical-stack">
-        <div id = "intro-h2">
-          <h2 class = "heading-hello-howard">Hi, I'm Howard!</h2>
-          <h2 class = "heading-hello-howard">A <strong class = "extra-strong">product designer</strong> seeking to......</h2>
+        <div id = "title-heading-top">
+          <div id = "intro-h2">
+            <h2 class = "heading-hello-howard">Hi, I'm Howard!</h2>
+            <h2 class = "heading-hello-howard">A <strong class = "extra-strong">product designer</strong> seeking to......</h2>
+          </div>
+          <div id ="heading-digital-product-designer">
+            <h1>CREATE <span class = "kern-LA">L</span><span class = "kern-AS">A</span>STING IMPA<span class = "kern-CT">C</span>T</h1>
+          </div>
         </div>
-        <div id ="heading-digital-product-designer">
-          <h1>CREATE <span class = "kern-LA">L</span><span class = "kern-AS">A</span>STING IMPA<span class = "kern-CT">C</span>T</h1>
-        </div>
-        <div id = "intro-paragraph" class = "paragraph-with-break">
-          <p>
-            through my background in <strong class = "extra-strong">design, computing science, and business</strong>. As well as
-            a dedication to <strong>connect with people</strong> and resolve their problems. Let's change the world together!
-          </p>
-          <p>
-            Based in <strong>Vancouver, BC</strong>.
-          </p>
+        <div id = "title-heading-bottom">
+          <div id = "intro-paragraph">
+            <p>
+             Through background in <strong class = "extra-strong">business, computing science, and design</strong>,
+            </p>
+            <p>
+             Where strategy, logic, and visuals perfectly align.
+            </p>
+            <p>
+             Curious, vocal, through <strong class = "extra-strong">communication</strong> I refine,
+            </p>
+            <p>
+             Helping world changing ideas come true then shine.
+            </p>
+           </div>
+          <div id = "based-vancouver">
+            <img src="resources/h2 dot.png" alt="a dot"></img>
+            <h3>Vancouver, BC</h3>
+          </div>
         </div>
         <div id = "scroll-down-arrow">
           <img id = "scroll-down-arrow-image" src="resources/scroll down arrow.png" alt="scroll down!"></img>
