improved emphasis on certain text

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
           </div>
           <div class = "paragraph-with-break">
             <p>
-              I am an aspiring <strong>product and UX designer</strong>. 
+              I am an aspiring <strong class = "extra-strong">product designer and digital marketer</strong>. 
             </p>
             <p>
               My diverse background in <strong>business and computing science, combined with design</strong>, has shaped my focus on the consideration and unflattening of 
@@ -74,7 +74,7 @@
               I love talking to people, working with them, and understanding their perspectives.
             </p>
             <p>
-              My goal is to create user-centred solutions that connect various perspectives through <strong>clear communication and thoughtful design.</strong>     
+              My goal is to create user-centred solutions that connect various perspectives through <strong class = "extra-strong">clear communication and thoughtful design.</strong>     
             </p>
           </div>    
         </div>
