--- a/wealthsimple.html
+++ b/wealthsimple.html
@@ -156,7 +156,10 @@
 
       <div id = "wealthsimple-design-platform" class = "grid-area sub-section">
         <div>
-          <h2>Wealthsimple: Our Design Platform</h2>
+          <div class = "h2-with-dot">
+            <img src="resources/h2 dot.png" alt="a dot"></img>
+            <h2>Wealthsimple: Our Design Platform</h2>
+          </div>
           <div class = "paragraph-with-break">
             <p>To best tackle this problem, I <strong>advocated for exploring existing investment related platforms as points of intervention</strong> over 
               designing a new one, and finalized Wealthsimple as that platform.</p>
