shorter poem writeup in landing

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div id = "title-heading-bottom">
           <div id = "intro-paragraph">
             <p>
-             Through background in <strong class = "extra-strong">business, computing science, and design</strong>,
+             Via background in <strong class = "extra-strong">business, coding, and design</strong>,
             </p>
             <p>
              Where strategy, logic, and visuals perfectly align.
