Added red dot to a h2

--- a/closetshare.html
+++ b/closetshare.html
@@ -175,7 +175,10 @@
         </div>
       </div> 
 
-      <h2>Current Avenues and Their Core Issues</h2>
+      <div class = "h2-with-dot">
+        <img src="resources/h2 dot.png" alt="a dot"></img>
+        <h2>Current Avenues and Their Core Issues</h2>
+      </div>
       <div id = "closetshare-avenue-issues" class = "sub-section">
 
         <!-- avenue A: Influencers -->
