--- a/index.html
+++ b/index.html
@@ -234,6 +234,20 @@
             </div>
           </a>
 
+          <!--Sporefall-->
+          <a href="javascript:void(0);" class="fun-project" id="sporefall" onclick="toSporeFall()">
+            <div class = "fun-project-external-icon"></div>
+            <div></div>
+            <div class = "fun-project-title">
+              <h2 class = "center-heading-with-line">Sporefall: No One Left Behind</h2>
+              <div class = "fun-project-taglist">
+                <h3 class = "project-tag">Graphic Design</h3>
+                <h3 class = "project-tag">Video Editing</h3>
+                <h3 class = "project-tag">Board Game</h3>
+              </div>
+            </div>
+          </a>
+
           <!--Small But Mighty-->
           <a href="javascript:void(0);" class="fun-project" id="smallbutmighty" onclick="toSmallButMighty()">
             <div class = "fun-project-external-icon"></div>
