updated about pic!

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
       <h1>Hi! I'm Howard O_O </h1>
       <div id = "about-me-and-my-background" class = "grid-area sub-section">
         <div class = "image-with-frame">
-          <img src="resources/about/about-portrait.png" alt="Picture of me!"></img>
+          <img src="resources/about/about-portrait.jpg" alt="Picture of me!"></img>
         </div>
         <div class>
           <div class = "h2-with-dot">
