--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
             <p>
              Helping world changing ideas come true then shine.
             </p>
+            <p id = "home-poem-last-line">
+             Holy doggo I can't believe I managed to make that rhyme.
+            </p>
            </div>
           <div id = "based-vancouver">
             <img src="resources/h2 dot.png" alt="a dot"></img>
