--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
              Helping world changing ideas come true then shine.
             </p>
             <p id = "home-poem-last-line">
-             Holy doggo I can't believe I managed to make that rhyme.
+             Holy doggo I managed to make that rhyme!?
             </p>
            </div>
           <div id = "based-vancouver">
@@ -242,7 +242,7 @@
             <div class = "fun-project-external-icon"></div>
             <div></div>
             <div class = "fun-project-title">
-              <h2 class = "center-heading-with-line">Sporefall: No One Left Behind</h2>
+              <h2 class = "center-heading-with-line">Sporefall</h2>
               <div class = "fun-project-taglist">
                 <h3 class = "project-tag">Graphic Design</h3>
                 <h3 class = "project-tag">Video Editing</h3>
